# llvm-c-compiler-toolchain

./: README.md
.github/workflows/: parallel-make.yml  testing-suite.yml
build-tool/: CMakeLists.txt  Cargo.toml  README.md
build-tool/docs/: SPEC.md
build-tool/examples/: Makefile  common.h  main.c  utils.c
build-tool/include/: cli.h  makefile.h  planner.h
build-tool/src/: cli.cpp  cli.rs  lib.rs  main.cpp  makefile.cpp  makefile.rs  planner.cpp  planner.rs
build-tool/src/engine/: cancellation.rs  dependency.rs  handle.rs  metrics.rs  mod.rs  priority.rs  runtime.rs  steal.rs  task.rs  worker.rs
build-tool/tests/: build_tool_e2e.rs  build_tool_e2e_test.cpp  makefile_parser.rs  makefile_parser_test.cpp  planner.rs  planner_test.cpp
c-compiler/: .gitignore  CMakeLists.txt  README.md
c-compiler-llvm/: CMakeLists.txt  README.md
c-compiler-llvm/src/: codegen.cpp
c-compiler/docs/: ir_walkthrough.md  language_spec.md
c-compiler/examples/: array_sum.mc  bit_ops.mc  control_flow.mc  fibonacci.mc  fizzbuzz.mc  gcd.mc  pointer_swap.mc  struct_point.mc  sum_of_squares.mc
c-compiler/include/: ast.h
c-compiler/runtime/: print_runtime.c  print_runtime.h
c-compiler/src/: codegen.cpp  parser.cpp  sema.cpp
c-compiler/tests/: codegen_test.cpp  parser_test.cpp  sema_test.cpp
c-linker/: CMakeLists.txt  README.md
c-linker/scripts/: configure.sh
c-linker/src/: cli.cpp  diagnostic.cpp  elf_reader.cpp  elf_writer.cpp  linker.cpp  main.cpp  relocation_applier.cpp  section_merger.cpp  symbol_resolver.cpp
c-linker/tests/: cli_test.cpp  elf_reader_test.cpp  linker_test.cpp  relocation_test.cpp  section_merger_test.cpp  symbol_resolver_test.cpp
c-linker/tests/fixtures/: conflict_add.c  data_pointer.c  local_helper_a.c  local_helper_b.c  math.c  start_calls_add.c
c-linker/tests/support/: compile_fixture.h
c-linter/: CMakeLists.txt  README.md
c-linter/docs/: SPEC.md
c-linter/examples/: sample.c
c-linter/include/: snippet.h
c-linter/src/: brace_style_rule.cpp  diagnostic.cpp  lexer.cpp  line_rules.cpp  linter.cpp  magic_number_rule.cpp  main.cpp  naming_rule.cpp  snippet.cpp  token.cpp
c-linter/tests/: brace_style_rule_test.cpp  cli_test.cpp  lexer_test.cpp  line_rules_test.cpp  linter_test.cpp  magic_number_rule_test.cpp  naming_rule_test.cpp  snippet_test.cpp
c-linter/tests/fixtures/: allman_style.c  clean.c  kitchen_sink.c  short_line.c
c-preprocessor/: CMakeLists.txt  README.md
c-preprocessor/include/: comment_stripper.h  diagnostics.h  macro_expander.h  macro_table.h  pp_tokenizer.h  preprocessor.h  token.h
c-preprocessor/scripts/: configure.sh
c-preprocessor/src/: comment_stripper.cpp  diagnostics.cpp  macro_expander.cpp  macro_table.cpp  main.cpp  pp_tokenizer.cpp  preprocessor.cpp
c-static-analyzer/: .gitignore  CMakeLists.txt  README.md
c-static-analyzer/docs/: SPEC.md
c-static-analyzer/include/: cfg.h
c-static-analyzer/include/rules/: sa006_uninitialized_variable.h
c-static-analyzer/src/: analyzer.cpp  cfg.cpp  cli.cpp  config.cpp  diagnostic.cpp  fnmatch.cpp  main.cpp  visitor.cpp
c-static-analyzer/src/rules/: sa001_complexity.cpp  sa002_unused_variables.cpp  sa003_nesting.cpp  sa004_missing_return.cpp  sa005_unreachable_code.cpp  sa006_uninitialized_variable.cpp
c-static-analyzer/tests/: analyzer_test.cpp  cfg_test.cpp  cli_test.cpp  config_test.cpp  fnmatch_test.cpp  golden_test.cpp  sa001_complexity_test.cpp  sa002_unused_variables_test.cpp  sa003_nesting_test.cpp  sa004_missing_return_test.cpp  sa005_unreachable_code_test.cpp  sa006_uninitialized_variable_test.cpp
parallel-make/: README.md
testing/: README.md
testing/benchmarks/: run_benchmarks.py
testing/benchmarks/programs/: bubble_sort.mc  fibonacci.mc  sieve.mc
testing/differential/: run_differential_tests.py
testing/differential/cases/: 01_arithmetic.mc  02_control_flow.mc  03_pointers.mc  04_linking.mc
testing/integration/: minic_clinker_smoke.py
testing/integration/fixtures/: two_functions.mc
